fix: 🐛 Fixed broken buttons and modals on mobile devices
Fixed #41, #42 and #46

--- a/src/assets/css/globals.css
+++ b/src/assets/css/globals.css
@@ -39,6 +39,8 @@
 
   /* Z-indices */
   --z-index-statistics-panel: 1000;
+  --z-index-modal-backdrop: 2000;
+  --z-index-modal: 2001;
 }
 
 @media screen and (max-width: 1080px) {
